--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,15 @@
 {
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
+  "name": "esa Markdown Copy",
+  "description": "esa の Markdown をいい感じにコピーできます。",
   "version": "0.1",
   "manifest_version": 2,
-  "browser_action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+  "icons": {
+    "128": "hello_extensions.png"
   },
-  "commands": {
-    "_execute_browser_action": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+F",
-        "mac": "MacCtrl+Shift+F"
-      },
-      "description": "Opens hello.html"
+  "content_scripts": [
+    {
+      "matches": ["https://*.esa.io/posts/*"],
+      "js": ["index.js"]
     }
-  }
+  ]
 }
