--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1",
   "manifest_version": 2,
   "icons": {
-    "128": "hello_extensions.png"
+    "32": "emdc.png"
   },
   "content_scripts": [
     {
